log
Thu 14 Sep 2023 12:51:55 PM UTC: 
 tests:  1|8
total_score: 0/70
2e1c839
Thu 14 Sep 2023 01:02:12 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|8
total_score: 0/70
26b6722
Thu 14 Sep 2023 01:02:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
145b9b4
Thu 14 Sep 2023 01:14:26 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   60 |   TreeNode *parent = NULL;
      |             ^~~~~~
treemap.c:57:13: error: unused variable ‘Nuevo’ [-Werror=unused-variable]
   57 |   TreeNode *Nuevo = (TreeNode*) malloc(sizeof(TreeNode));
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
bbfbe3a
Thu 14 Sep 2023 01:16:01 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
296abec
Thu 14 Sep 2023 01:19:25 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
8e69da4
Thu 14 Sep 2023 01:19:54 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5bf910b
Thu 14 Sep 2023 01:20:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
2de1f14
Thu 14 Sep 2023 01:31:21 PM UTC: 
 treemap.c | 44 ++++++++++++++++----------------------------
 1 file changed, 16 insertions(+), 28 deletions(-)
 tests:  5|7
total_score: 5/70
a1f874c
Thu 14 Sep 2023 01:33:43 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:14: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   87 |       current=current->pair;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
1553446
